--- a/damotosArtsAndCrafts/resources/style.css
+++ b/damotosArtsAndCrafts/resources/style.css
@@ -1,22 +1,24 @@
-h1 {
+body {
   font-family: Helvetica;
-  font-size: 100px;
+}
+
+.bold {
   font-weight: bold;
+}
+
+h1 {
+  font-size: 100px;
   color: khaki;
   text-align: center;
   background-image: url('https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg');
 }
 
 .title {
-  font-family: Helvetica;
   font-size: 32px;
-  font-weight: bold;
   color: white;
 }
 
 .price {
-  font-family: Helvetica;
-  font-weight: bold;
   color: blue;
 }
 
